# lib-ll

./: .gitignore  CMakeLists.txt  README.md
include/: ll.h  queue.h  stack.h
src/: main.c
src/list/CRUD/: create.c  delete.c  read.c  update.c
src/node/: cmp_node.c
src/node/CRUD/: create.c  delete.c  read.c  update.c
src/queue/: queue.c
src/stack/: stack.c
tests/list/CRUD/: create.c  read.c  update.c
